update readme and add docs/ to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,22 @@
 /*env*/
+
 .sphinx/venv/
 .sphinx/requirements.txt
 .sphinx/warnings.txt
 .sphinx/.wordlist.dic
 .sphinx/.doctrees/
 .sphinx/node_modules/
+
+docs/
+
 package*.json
+
 _build
+
 .DS_Store
+
 __pycache__
+
 .idea/
+
 .vscode/
