--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pluggy==1.5.0
 Pygments==2.18.0
 pytest==8.3.3
 python-slugify==8.0.4
+PyYAML==6.0.2
 requests==2.32.3
 snowballstemmer==2.2.0
 Sphinx==8.1.3
