--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
-/*env*/
+# Starter pack rules start here
 
+# Environment
+/*env*/
 .sphinx/venv/
-.sphinx/requirements.txt
+
+# Sphinx
 .sphinx/warnings.txt
 .sphinx/.wordlist.dic
 .sphinx/.doctrees/
 .sphinx/node_modules/
 
-docs/
+# Vale
+.sphinx/styles/*
+.sphinx/vale.ini
 
-package*.json
+# Build outputs
 _build
+
+# Node.js
+package*.json
+
+# Unrelated cache and config files
 .DS_Store
 __pycache__
 .idea/
